// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column> should render two H1 elements in column layout, centered 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "400",
        "textAlign": "left",
      }
    }
  >
    Brian Kernighan
  </Text>
  <Text
    style={
      Object {
        "color": "#000",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "400",
        "textAlign": "left",
      }
    }
  >
    Dennis Ritchie
  </Text>
</View>
`;

exports[`<Float> should render two H1 elements in float layout 1`] = `
<View
  style={
    Object {
      "position": "absolute",
      "zIndex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "400",
        "textAlign": "left",
      }
    }
  >
    Brian Kernighan
  </Text>
  <Text
    style={
      Object {
        "color": "#000",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "400",
        "textAlign": "left",
      }
    }
  >
    Dennis Ritchie
  </Text>
</View>
`;

exports[`<Row> should render two H1 elements in row layout 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "400",
        "textAlign": "left",
      }
    }
  >
    Brian Kernighan
  </Text>
  <Text
    style={
      Object {
        "color": "#000",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "400",
        "textAlign": "left",
      }
    }
  >
    Dennis Ritchie
  </Text>
</View>
`;
